--- a/src/Views/sample_view.fxml
+++ b/src/Views/sample_view.fxml
@@ -1,14 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controllers.sample_controller"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="482.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.sample_controller">
+    <children>
+        <AnchorPane prefHeight="542.0" prefWidth="682.0">
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
+         <children>
+            <Pane prefHeight="542.0" prefWidth="301.0" style="-fx-background-color: #042D92;">
+               <children>
+                  <Label layoutX="83.0" layoutY="109.0" text="Warehouse" textFill="WHITE">
+                     <font>
+                        <Font name="DIN Alternate Bold" size="35.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="129.0" layoutY="163.0" text="Manager" textFill="WHITE">
+                     <font>
+                        <Font name="DIN Alternate Bold" size="33.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="256.0" fitWidth="253.0" layoutX="20.0" layoutY="242.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@data-warehouse.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="41.0" fitWidth="58.0" layoutX="32.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@data-warehouse-2.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane layoutX="301.0" prefHeight="542.0" prefWidth="386.0" style="-fx-background-color: FFFFFF;">
+               <children>
+                  <Button layoutX="231.0" layoutY="255.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="111.0" style="-fx-background-color: #042D92;" text="Sign In" textFill="WHITE" />
+                  <PasswordField layoutX="79.0" layoutY="189.0" prefHeight="33.0" prefWidth="263.0" promptText="Password" style="-fx-border-color: #042D92;" />
+                  <TextField layoutX="79.0" layoutY="136.0" prefHeight="33.0" prefWidth="263.0" promptText="Username" style="-fx-border-color: #042D92;" />
+                  <Label contentDisplay="TOP" layoutX="133.0" layoutY="40.0" prefHeight="80.0" prefWidth="150.0" text="Log In" textAlignment="CENTER" textFill="#042d92">
+                     <font>
+                        <Font name="DIN Alternate Bold" size="49.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="79.0" layoutY="255.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="136.0" style="-fx-background-color: #042D92;" text="Forgot Password" textFill="WHITE" />
+                  <Separator layoutX="78.0" layoutY="328.0" prefHeight="9.0" prefWidth="122.0" />
+                  <Label layoutX="204.0" layoutY="323.0" text="Or" />
+                  <Separator layoutX="220.0" layoutY="328.0" prefHeight="9.0" prefWidth="122.0" />
+                  <ImageView fitHeight="33.0" fitWidth="52.0" layoutX="45.0" layoutY="189.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@lock.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="33.0" fitWidth="52.0" layoutX="45.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@login.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="51.0" fitWidth="78.0" layoutX="11.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@warehouse.png" />
+                     </image>
+                  </ImageView>
+                  <Button layoutX="79.0" layoutY="376.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="263.0" style="-fx-background-color: #042D92;" text="Sign up" textFill="WHITE" />
+               </children>
+            </Pane>
+         </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
