--- a/src/Views/SignUp/signup.fxml
+++ b/src/Views/SignUp/signup.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -24,20 +23,15 @@
       <TextField fx:id="emailTF" layoutX="52.0" layoutY="319.0" prefHeight="40.0" prefWidth="300.0" promptText="Email" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
       <ComboBox fx:id="roleSelectionCB" layoutX="52.0" layoutY="456.0" onAction="#roleSelectionCBAction" prefHeight="40.0" prefWidth="300.0" promptText="Role" style="-fx-background-color: #FFFFFF; -fx-prompt-text-fill: #FFFFFF; -fx-border-radius: 5px; -fx-border-color: #c5d1e3; -fx-border-width: 0.5px;" />
       <DatePicker fx:id="dayOfBirthDP" layoutX="52.0" layoutY="387.0" prefHeight="40.0" prefWidth="300.0" promptText="Birthday" style="-fx-background-color: #FFFFFF; -fx-border-width: 0.5; -fx-border-color: #c5d1e3; -fx-border-radius: 5px;" />
-      <Button fx:id="signUpButton" layoutX="244.0" layoutY="530.0" mnemonicParsing="false" onAction="#signUpButtonAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Sign Up" textFill="WHITE">
+      <Button fx:id="saveInsertButton" layoutX="52.0" layoutY="533.0" mnemonicParsing="false" onAction="#saveInsertButtonAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Save " textFill="WHITE">
          <font>
             <Font name="Berlin Sans FB" size="15.0" />
          </font>
       </Button>
-      <Label layoutX="52.0" layoutY="530.0" text="Already have account?">
+      <Button fx:id="homeBackButton" layoutX="211.0" layoutY="533.0" mnemonicParsing="false" onAction="#homeBackButtonAction" prefHeight="40.0" prefWidth="108.0" style="-fx-background-color: #4271fc;" text="Home" textFill="WHITE">
          <font>
             <Font name="Berlin Sans FB" size="15.0" />
          </font>
-      </Label>
-      <Label fx:id="signInButtonAction" layoutX="52.0" layoutY="550.0" onMouseClicked="#signInButtonAction" text="Sign In" textFill="#211cff">
-         <font>
-            <Font name="Berlin Sans FB" size="15.0" />
-         </font>
-      </Label>
+      </Button>
    </children>
 </AnchorPane>
