--- a/src/Views/Registration/registration.fxml
+++ b/src/Views/Registration/registration.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -34,5 +35,6 @@
          </font>
       </Button>
       <TextField fx:id="fullnameTF" layoutX="52.0" layoutY="105.0" prefHeight="40.0" prefWidth="300.0" promptText="Full Name" style="-fx-background-color: #FFFFFF; -fx-border-color: #c5d1e3; -fx-border-width: 0.5; -fx-border-radius: 5px;" />
+      <Label fx:id="noticeLabel" layoutX="392.0" layoutY="186.0" text="Error message" />
    </children>
 </AnchorPane>
