--- a/src/Views/ProductManagement/product_management.fxml
+++ b/src/Views/ProductManagement/product_management.fxml
@@ -41,5 +41,10 @@
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
+      <ImageView fitHeight="66.0" fitWidth="47.0" layoutX="753.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@2x/shopping-cart.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
