--- a/src/Views/ProductManagement/product_management.fxml
+++ b/src/Views/ProductManagement/product_management.fxml
@@ -41,9 +41,19 @@
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <ImageView fitHeight="66.0" fitWidth="47.0" layoutX="753.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+      <Button layoutX="1156.0" layoutY="648.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
+         <font>
+            <Font name="Tahoma" size="16.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1166.0" layoutY="656.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@2x/shopping-cart.png" />
+            <Image url="@2x/2x/back@2x.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="58.0" fitWidth="49.0" layoutX="746.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@2x/2x/cart@2x.png" />
          </image>
       </ImageView>
    </children>
