--- a/src/Views/ProductManagement/product_management.fxml
+++ b/src/Views/ProductManagement/product_management.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.ProductManagement.ProductManagement">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProductManagement.ProductManagementController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1314.0" layoutX="8.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,26 +23,26 @@
             <Font name="Tahoma" size="14.0" />
          </font>
       </Button>
-      <TableView id="table" layoutX="49.0" layoutY="112.0" prefHeight="577.0" prefWidth="735.0" stylesheets="@tableview.css">
+      <TableView fx:id="tablesanpham" layoutX="49.0" layoutY="112.0" onMouseClicked="#tablesanphamAction" prefHeight="577.0" prefWidth="735.0" stylesheets="@tableview.css">
         <columns>
-          <TableColumn prefWidth="49.0" text="ID" />
-          <TableColumn minWidth="0.0" prefWidth="335.0" text="Tên sản phẩm" />
-            <TableColumn minWidth="0.0" prefWidth="154.0" text="Loại sản phẩm" />
-            <TableColumn minWidth="0.0" prefWidth="103.0" text="Giá" />
-            <TableColumn minWidth="0.0" prefWidth="93.0" text="Số lượng" />
+          <TableColumn fx:id="idspCol" prefWidth="49.0" text="ID" />
+          <TableColumn fx:id="tenspCol" minWidth="0.0" prefWidth="335.0" text="Tên sản phẩm" />
+            <TableColumn fx:id="loaispCol" minWidth="0.0" prefWidth="154.0" text="Loại sản phẩm" />
+            <TableColumn fx:id="giaspCol" minWidth="0.0" prefWidth="103.0" text="Giá" />
+            <TableColumn fx:id="numspCol" minWidth="0.0" prefWidth="93.0" text="Số lượng" />
         </columns>
       </TableView>
-      <TextField layoutX="866.0" layoutY="433.0" prefHeight="47.0" prefWidth="290.0" promptText="Thêm số lượng" style="-fx-background-color: #fff; -fx-border-color: #f3f3f3; -fx-border-radius: 5px;">
+      <TextField fx:id="addnumspTF" layoutX="866.0" layoutY="433.0" prefHeight="47.0" prefWidth="290.0" promptText="Thêm số lượng" style="-fx-background-color: #fff; -fx-border-color: #f3f3f3; -fx-border-radius: 5px;">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button layoutX="1166.0" layoutY="435.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="91.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="Thêm" textFill="WHITE">
+      <Button fx:id="addBtn" layoutX="1166.0" layoutY="435.0" mnemonicParsing="false" onAction="#addBtnAction" prefHeight="41.0" prefWidth="91.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="Thêm" textFill="WHITE">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
       </Button>
-      <Button layoutX="1156.0" layoutY="648.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
+      <Button fx:id="backhomeBtn" layoutX="1156.0" layoutY="648.0" mnemonicParsing="false" onAction="#backhomeBtnAction" prefHeight="41.0" prefWidth="112.0" style="-fx-background-color: #454EFF; -fx-border-radius: 10px;" text="   Trở về" textFill="WHITE">
          <font>
             <Font name="Tahoma" size="16.0" />
          </font>
@@ -51,10 +52,16 @@
             <Image url="@2x/2x/back@2x.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="58.0" fitWidth="49.0" layoutX="746.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="cartBtn" fitHeight="58.0" fitWidth="49.0" layoutX="746.0" layoutY="25.0" onMouseClicked="#cartBtnAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@2x/2x/cart@2x.png" />
          </image>
       </ImageView>
+      <Label fx:id="IDlabel" layoutX="918.0" layoutY="196.0" prefHeight="26.0" prefWidth="229.0" text="ID label" />
+      <Label fx:id="namesp_label" layoutX="1048.0" layoutY="239.0" prefHeight="26.0" prefWidth="176.0" text="name sản phẩm label" />
+      <Label fx:id="loaisp_label" layoutX="954.0" layoutY="292.0" prefHeight="18.0" prefWidth="187.0" text="loại sản phẩm label" />
+      <Label fx:id="giasp_label" layoutX="945.0" layoutY="334.0" prefHeight="25.0" prefWidth="203.0" text="giá sản phẩm label" />
+      <Label fx:id="numsp_label" layoutX="1033.0" layoutY="375.0" prefHeight="35.0" prefWidth="166.0" text="số lượng còn label" />
+      <Label fx:id="message_label" layoutX="881.0" layoutY="536.0" prefHeight="18.0" prefWidth="245.0" text="Message" />
    </children>
 </AnchorPane>
