--- a/src/Views/HomeScreen/UserLauncher/user_launcher.fxml
+++ b/src/Views/HomeScreen/UserLauncher/user_launcher.fxml
@@ -5,17 +5,17 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="720.0" maxWidth="1280.0" prefHeight="720" prefWidth="1280" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeScreenController.AdminScreenController">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" prefHeight="720" prefWidth="1280" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeScreenController.UserScreenController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@background.png" />
          </image>
       </ImageView>
-      <Button id="btnOrder" fx:id="productBTN" layoutX="185.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <Button id="btnCheck" fx:id="productBTN1" layoutX="517.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <Button id="btnAnalysis" fx:id="productBTN2" layoutX="846.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <Button id="btnProduct" fx:id="productBTN11" layoutX="350.0" layoutY="381.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
-      <Button id="btnAccount" fx:id="productBTN111" layoutX="681.0" layoutY="381.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnOrder" fx:id="donhangBtn" layoutX="185.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnCheck" fx:id="pheduyetycBtn" layoutX="517.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnAnalysis" fx:id="thongkeBtn" layoutX="846.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnProduct" fx:id="productBtn" layoutX="350.0" layoutY="381.0" mnemonicParsing="false" onAction="#productBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
+      <Button id="btnAccount" fx:id="accountsettingBtn" layoutX="681.0" layoutY="381.0" mnemonicParsing="false" onAction="#AccountSettingBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@user_launcher_style.css" />
    </children>
 </AnchorPane>
