--- a/src/Views/HomeScreen/WarehouseLauncher/warehouse_launcher.fxml
+++ b/src/Views/HomeScreen/WarehouseLauncher/warehouse_launcher.fxml
@@ -12,9 +12,9 @@
             <Image url="@background.png" />
          </image>
       </ImageView>
-      <Button id="btnOrder" fx:id="productBTN" layoutX="349.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
-      <Button id="btnCheck" fx:id="productBTN1" layoutX="681.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
-      <Button id="btnProduct" fx:id="productBTN11" layoutX="349.0" layoutY="382.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
-      <Button id="btnAccount" fx:id="productBTN111" layoutX="681.0" layoutY="382.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
+      <Button id="btnOrder" fx:id="donhangBtn" layoutX="349.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
+      <Button id="btnCheck" fx:id="pheduyetycBtn" layoutX="681.0" layoutY="89.0" mnemonicParsing="false" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
+      <Button id="btnProduct" fx:id="productBtn" layoutX="349.0" layoutY="382.0" mnemonicParsing="false" onAction="#productBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
+      <Button id="btnAccount" fx:id="accountsettingBtn" layoutX="681.0" layoutY="382.0" mnemonicParsing="false" onAction="#accountBTNAction" prefHeight="250.0" prefWidth="250.0" style="-fx-border-radius: 25px;" styleClass="btn" stylesheets="@warehouse_launcher_style.css" />
    </children>
 </AnchorPane>
